fix: img alignment issue

--- a/src/pages/projects.css
+++ b/src/pages/projects.css
@@ -41,11 +41,13 @@
 
 .project__imgWrapper {
     width: 100%;
-    height: 250px;
-    border-bottom: 1px solid var(--border-secondary);
-    background: var(--black);
-    overflow: hidden;
+    /* height: 250px;
     border-radius: 4px;
+    background: var(--black);
+    border-bottom: 1px solid var(--border-secondary); */
+    overflow: hidden;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
 }
 
 .project__img {
@@ -97,6 +99,10 @@
     font-style: normal;
 }
 
+.project__status {
+    cursor: pointer;
+}
+
 .project__title {
     margin-top: 25px;
     font-size: 1.5rem;
@@ -133,7 +139,7 @@
     font-size: 10px;
     font-weight: 400;
     text-transform: uppercase;
-    color: var(--gray);
+    color: var(--light-gray);
 }
 
 .project__stackList {
